--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "quickstart.js",
   "dependencies": {
     "chalk": "^1.1.3",
+    "commander": "^2.19.0",
     "google-auth-library": "^0.9.7",
     "googleapis": "^5.2.1",
     "node-rest-client": "^1.8.0"
